--- a/Demo.NetCore/Demo.NetCore.csproj
+++ b/Demo.NetCore/Demo.NetCore.csproj
@@ -13,13 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CoreForms.Web" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.ApplicationServices" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.Extensions" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.Services" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.Infrastructure" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.Infrastructure.Roslyn" Version="6.0.0-alpha.12" />
-    <PackageReference Include="CoreForms.Web.Infrastructure.MachineConfig" Version="6.0.0-alpha.12" />
+    <PackageReference Include="CoreForms.Web" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.ApplicationServices" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Extensions" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Services" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure.Roslyn" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure.MachineConfig" Version="6.0.0-alpha.17" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.1" GeneratePathProperty="true" ExcludeAssets="build" />
   </ItemGroup>
 
 </Project>
