--- a/Demo.Telerik/Demo.Telerik.csproj
+++ b/Demo.Telerik/Demo.Telerik.csproj
@@ -19,14 +19,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CoreForms.Web" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Extensions" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Extensions.Data.Linq" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Services" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Infrastructure" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Infrastructure.Roslyn" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.NetFrameworkBridge" Version="6.0.0-alpha.14" />
-    <PackageReference Include="CoreForms.Web.Infrastructure.MachineConfig" Version="6.0.0-alpha.14" />
+    <PackageReference Include="CoreForms.Web" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Extensions" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Extensions.Data.Linq" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Services" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure.Roslyn" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.NetFrameworkBridge" Version="6.0.0-alpha.17" />
+    <PackageReference Include="CoreForms.Web.Infrastructure.MachineConfig" Version="6.0.0-alpha.17" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.1" GeneratePathProperty="true" ExcludeAssets="build" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.1" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
   </ItemGroup>
